<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FF295567"
    tools:context="com.example.kartikey.wifipaint_project.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_height="50dp"
    android:background="#FFF2">

    <ImageButton
        android:id="@+id/new_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/new_pic"
        android:contentDescription="@string/start_new"/>
    <ImageButton
        android:id="@+id/draw_btn"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:src="@drawable/brush"
        android:contentDescription="@string/brush"/>
    <ImageButton
        android:id="@+id/erase_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/eraser"
        android:contentDescription="@string/erase"
        />
    <ImageButton
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/save"
        android:contentDescription="@string/save"/>
</LinearLayout>

<com.example.kartikey.wifipaint_project.Drawing_view
   android:id="@+id/drawing"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginBottom="3dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="3dp"
    android:layout_weight="1"
    android:background="#FFFFFF"
    />

<LinearLayout
    android:orientation="vertical"
    android:layout_marginLeft="80dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/paint_colors"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <ImageButton
        android:layout_width="@dimen/large_brush"
        android:layout_height="@dimen/large_brush"
        android:layout_margin="2dp"
        android:background="#FF660000"
        android:tag="#FF660000"
        android:src="@drawable/paint"
        android:onClick="paintClicked"
        android:contentDescription="@string/paint"/>

        <ImageButton
            android:layout_width="@dimen/large_brush"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FFE23B1E"
            android:tag="#FFE23B1E"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:contentDescription="@string/paint"/>
        <ImageButton
            android:layout_width="@dimen/large_brush"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FDED761A"
            android:tag="#FDED761A"
            android:src="@drawable/paint"
            android:onClick="paintClicked"
            android:contentDescription="@string/paint"/>
        <ImageButton
            android:layout_width="@dimen/large_brush"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FDFCFC1F"
            android:tag="#FDFCFC1F"
            android:src="@drawable/paint"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"/>
        <ImageButton
            android:layout_width="@dimen/large_brush"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FD16DA2D"
            android:tag="#FD16DA2D"
            android:src="@drawable/paint"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            />

        <ImageButton
            android:layout_width="@dimen/large_brush"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FD12B1A4"
            android:tag="#FD12B1A4"
            android:onClick="paintClicked"
            android:contentDescription="@string/paint"
            android:src="@drawable/paint"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
      <ImageButton
          android:layout_width="@dimen/large_brush"
          android:layout_height="@dimen/large_brush"
          android:layout_margin="2dp"
          android:background="#FD1237B1"
          android:tag="#FD1237B1"
          android:src="@drawable/paint"
          android:contentDescription="@string/paint"
          android:onClick="paintClicked"/>
        <ImageButton
            android:layout_width="@dimen/large_brush"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FDA01DE7"
            android:tag="#FDA01DE7"
            android:src="@drawable/paint"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"/>
        <ImageButton
            android:layout_width="@dimen/large_brush"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FDF1A1CD"
            android:tag="#FDF1A1CD"
            android:src="@drawable/paint"
            android:onClick="paintClicked"
            android:contentDescription="@string/paint"/>
        <ImageButton
            android:layout_width="@dimen/large_brush"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FFFFFFFF"
            android:tag="#FFFFFFFF"
            android:src="@drawable/paint"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            />
        <ImageButton
            android:layout_width="@dimen/large_brush"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FE747374"
            android:tag="#FE747374"
            android:src="@drawable/paint"
            android:onClick="paintClicked"
            android:contentDescription="@string/paint"/>
        <ImageButton
            android:layout_width="@dimen/large_brush"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#000000"
            android:tag="#000000"
            android:src="@drawable/paint"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"/>
    </LinearLayout>
</LinearLayout>
</LinearLayout>
